--- a/app/views/pages/welcome_page.html.erb
+++ b/app/views/pages/welcome_page.html.erb
@@ -1,2 +1,77 @@
-<h1>Welcome</h1>
+<!--  <title>World Wide Health and Travel</title> -->
+
+<!--
+<p class="zentriert">
+  <span class="hervorgehoben">World Wide Health And Travel</span>
+</p>
+<p class="zentriert">
+  We help to improve your life
+</p>
+<p class="zentriert">
+
+</p>
+-->
+
+
+<div  class="video-container" >
+  <%= video_tag "rotation.mp4", id:"bgvid", autoplay:"", loop:"", muted:"" %>
+</div>
+<div id="title"><h1 ><%= image_tag("title.png" ) %></h1></div>
+
+<div id="textContainer">
+
+  <!--erstelle login und registry in vertikaler order-->
+
+  <div id="logReg">
+  <div id="login">
+    <div id="link">
+    <%= link_to 'Login' , '/login'%>
+  </div>
+  </div>
+
+  <div id="register">
+    <div id="link">
+      <%= link_to 'Registrierung' , '/test'%>
+  </div>
+  </div>
+</div>
+
+  <!-- erstelle Box für text -->
+  <div id="vision">
+    <h1>Vision</h1>
+    <p> <br>Vorstellungen werden in traditioneller Ausdrucksweise bezeichnet als bewusstseinsinterne Gegenstände des vorstellend zu Einsichten oder
+            zu Erkenntnis von Zusammenhängen gelangenden Denkens.<br>
+            Real bildet der denkende Mensch aus seinem Erinnerungs- oder auch Vorstellungsmaterial sowohl einfache als auch komplexe, sprachlich
+            mitteilbare Gedankenformen oder eben Gedanken, über die er jemand anderen informieren kann, indem er ihm davon erzählt, so dass dieser
+            wiederum seinerseits über das von jenem Gedachte informiert wird. (Eine Information stellt ein bestimmtes Wissen dar.)
+            Vorstellungen werden in traditioneller Ausdrucksweise bezeichnet als bewusstseinsinterne Gegenstände des vorstellend zu Einsichten oder
+            zu Erkenntnis von Zusammenhängen gelangenden Denkens.<br>
+            Real bildet der denkende Mensch aus seinem Erinnerungs- oder auch Vorstellungsmaterial sowohl einfache als auch komplexe, sprachlich
+            mitteilbare Gedankenformen oder eben Gedanken, über die er jemand anderen informieren kann, indem er ihm davon erzählt, so dass dieser
+            wiederum seinerseits über das von jenem Gedachte informiert wird. (Eine Information stellt ein bestimmtes Wissen dar.)
+
+
+       </div>
+
+
+  <!-- erstelle Box für text -->
+  <div id="vision">
+    <h1>Vision II</h1>
+    <p> <br>Vorstellungen werden in traditioneller Ausdrucksweise bezeichnet als bewusstseinsinterne Gegenstände des vorstellend zu Einsichten oder
+      zu Erkenntnis von Zusammenhängen gelangenden Denkens.<br>
+      Real bildet der denkende Mensch aus seinem Erinnerungs- oder auch Vorstellungsmaterial sowohl einfache als auch komplexe, sprachlich
+      mitteilbare Gedankenformen oder eben Gedanken, über die er jemand anderen informieren kann, indem er ihm davon erzählt, so dass dieser
+      wiederum seinerseits über das von jenem Gedachte informiert wird. (Eine Information stellt ein bestimmtes Wissen dar.)
+      Vorstellungen werden in traditioneller Ausdrucksweise bezeichnet als bewusstseinsinterne Gegenstände des vorstellend zu Einsichten oder
+      zu Erkenntnis von Zusammenhängen gelangenden Denkens.<br>
+      Real bildet der denkende Mensch aus seinem Erinnerungs- oder auch Vorstellungsmaterial sowohl einfache als auch komplexe, sprachlich
+      mitteilbare Gedankenformen oder eben Gedanken, über die er jemand anderen informieren kann, indem er ihm davon erzählt, so dass dieser
+      wiederum seinerseits über das von jenem Gedachte informiert wird. (Eine Information stellt ein bestimmtes Wissen dar.)
+      </p>
+
+  </div>
+
+  <div id="schlusswort"><p>WwHaT@2018</p></div>
+
+</div>
 
