--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -1,3 +1,203 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+    font-family: Calibri;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
+#title {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-40%);
+
+    z-index: 1;
+}
+
+
+#textContainer{
+    position: absolute;
+    top: 200vh;
+    left: 50vw;
+
+    transform: translate(-50%,-40%);
+    overflow: hidden;
+
+    z-index: 2;
+}
+
+
+#login,
+#register{
+
+    /*feste Größe */
+
+    width: 18vw;
+    margin-top: 5vh;
+    padding: 5px 10px 5px 10px;
+    margin-left: 14.3vw;
+
+    font-family: "Segoe UI";
+    font-size: 2.8em;
+    size: auto;
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+
+    border-color: white;
+    border-width: 2px;
+    border-style: solid;
+}
+
+#link *{
+    text-decoration: none;
+    color: white;
+}
+
+#vision{
+
+    background: inherit;
+    text-align: left;
+    left: -25px;
+    right: 0;
+    top: -25px;
+    bottom: 0;
+    box-shadow: inset 0 0 0 500px rgba(255,255,255,0.32);
+    padding : 0px 5px 5px 10px;
+    color: white;
+    font-family: "Segoe UI Light";
+    font-size: 1.2em ;
+    margin-top: 100vh;
+    border-radius : 25px;
+
+
+}
+
+#schlusswort{
+
+
+    text-align: center;
+    left: -25px;
+    right: 0;
+    top: -25px;
+    bottom: 0;
+
+    padding : 0px 5px 5px 10px;
+    color: white;
+    font-family: "Segoe UI Light";
+    font-size: 1.2em ;
+    margin-top: 40vh;
+    border-radius : 25px;
+
+
+}
+
+.video-container {
+
+    position: fixed ;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    z-index: 0;
+}
+
+.video-container video {
+    /* Make video to at least 100% wide and tall /
+    min-width: 100%;
+    min-height: 100%;
+
+    / Setting width & height to auto prevents the browser from stretching or squishing the video /
+    width: auto;
+    height: auto;
+
+    / Center the video */
+
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-40%);
+}
+
+/*Login Bereich*/
+#loginField{
+    padding: 20px 20px 50px 20px;
+    border: none;
+
+}
+
+#loginLegend{
+    margin-left: 8.5vw;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: "Segoe UI";
+    font-size: 2.8em;
+
+}
+
+#loginAttribut{
+    font-family: "Segoe UI Light";
+    font-size: 2.0em;
+    text-align: left;
+    padding: 20px 20px 20px 20px;
+}
+
+#loginInput {
+    color: white;
+    font-family: "Segoe UI Light";
+    font-size: 1.8em;
+    outline: none;
+    background-color: transparent;
+    width: 90%;
+    border-color: white;
+    border-radius: 10px;
+    border-width: 2px;
+
+
+
+}
+
+#loginLogin{
+    width: 8vw;
+    padding: 5px 10px 5px 10px;
+    font-family: "Segoe UI Light";
+    font-size: 2.0em;
+
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    margin-left: 13vw;
+    border-color: white;
+    border-width: 1.5px;
+    border-style: solid;
+
+
+}
+
+#loginContainer{
+    position: absolute;
+    text-align: center;
+
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-40%);
+
+    box-shadow: inset 0 0 0 500px rgba(255,255,255,0.32);
+    border-radius : 25px;
+    height: 37%;
+    z-index: 2;
+}
+
+#log{
+    text-align: center;
+    color: white;
+
+}
+
