--- a/app/views/diseases/show.html.erb
+++ b/app/views/diseases/show.html.erb
@@ -147,40 +147,28 @@
 <!-- div mit combobox für die Auswahl -->
 <div id="tabellenPlatz">
 
-  <div id="wikiTitle">Gelbfieber</div>
+  <div id="wikiTitle"><%=@disease.name %></div>
 
 <br>
   <div id="register">
-  <a href="#Anker11" id="anker">1.1 Was ist Gelbfieber?</a><br>
+  <a href="#Anker11" id="anker">1.1 Was ist <%=@disease.name %>?</a><br>
   <a href="#Anker12" id="anker">1.2 Wie infiziert man sich?</a><br>
   <a href="#Anker13" id="anker">1.3 Symptome</a><br>
   <a href="#Anker14" id="anker">1.4 Vorbeugung und Bekämpfung</a><br>
   </div>
 
   <div id="inhalt">
-  <br><h2 id="Anker11">1.1 Was ist Gelbfieber?</h2>
-  Gelbfieber wird verursacht durch das Gelbfieber Virus. Übertragen wird es durch Mücken, die mit diesem Virus infiziert
-  sind. Verbreitet vor allem in Afrika und Südamerika. man unterscheidet in Dschungel Gelbfieber und Stadt Gelbfieber,
-  je nachdem wie und wo man infiziert wird.<br><br>
+  <br><h2 id="Anker11">1.1 Was ist <%=@disease.name %>?</h2>
+  <%= @disease.what%><br><br>
 
     <br><h2 id="Anker12">1.2 Wie infiziert man sich?</h2>
-  Bei beiden Varianten sind Tiere der Ursprung. Bei dem Dschungel Gelbfieber können z.B. Affen sein, die infiziert sind.
-  Daraufhin wird der Virus von Stechmücken an den dort lebenden Menschen übertragen. Bei dem Stadt Gelbfieber besitzt ein
-  Mensch diesen Virus den er z.B. aus anderen Ländern mitgebracht hat. Dieser kann dann auch wieder über Stechmücken <
-  übertragen werden<br><br>
+    <%= @disease.infection%><br><br>
 
     <br><h2 id="Anker13">1.3 Symptome</h2>
-  Die Symptome erscheinen binnen 3 bis 6 Tagen nach der Ansteckung. Gelbfieber verläuft in vielen Fällen wie eine Grippe.
-  Typisch wäre in diesem Fall: Fieber, Kopfschmerzen, Gliederschmerzen, Muskelschmerzen, Schüttelfrost, Übelkeit und
-  Erbrechen. Nach einigen Tagen ist Krankheit meistens vorüber. Bei schlimmeren Fällen tritt folgendes auf: Erbrechen
-  von Galle, Durchfall, starker Durst, Überwärmte Haut, Unangenehmer Mundgeruch, Gaumenblutungen. Wenn es ganz schlimm
-  läuft kann es zu Leber oder Nierenschäden kommen.<br><br>
+    <%= @disease.symptom%><br><br>
 
     <br><h2 id="Anker14">1.4 Vorbeugung und Bekämpfung</h2>
-  Um Gelbfieber zu verhindern sollte man sich Impfen lassen. Außerdem sollte man darauf achten, dass man lange Sachen
-  an hat und Mückenschutzmittel dabei hat.  Momentan gibt es noch keine direkte Behandlung von Gelbfieber. Das einzige
-  was man behandeln kann die einzelnen Symptome. Also je nachdem ob man nun Fieber oder Schmerzen hat werden Medikamente
-  eingesetzt die die Schmerzen lindern.<br>
+    <%= @disease.counteraction%><br>
   <br>
 </div>
 </div>
