managed side bar in one file

--- a/app/views/pages/test_page.html.erb
+++ b/app/views/pages/test_page.html.erb
@@ -161,19 +161,7 @@
 
 
 
-<div id="SeitenfensterLinks">
-  <div id="menu">
-
-    <ul>
-      <li id="menuLink" ><a href="">Accountinfo</a> </li>
-      <li id="menuLink"><a href="http://localhost:3000/main">Home</a></li>
-      <li id="menuLink"><a href="http://localhost:3000/impfpass">Impfpass</a></li>
-      <li id="menuLink"><a href="#">Notizen</a></li>
-      <li id="menuLink"><a href="http://localhost:3000/socialProjects">soziale Projekte</a></li>
-      <li id="menuLink"><a href="http://localhost:3000/wikiMain">Kompedium</a></li>
-    </ul>
-  </div>
-</div>
+<%= render partial: 'pages/leftsidepart'%>
 
 
 <!--rechte Seite-->
