sozial projects table is now available

--- a/app/views/diseases/wikiMain_page.html.erb
+++ b/app/views/diseases/wikiMain_page.html.erb
@@ -110,20 +110,7 @@
   <marquee position="bottom" direction="left" bgcolor="transparent" scrollamount="10" scrolldelay="100">*****NEWS********NEWS************NEWS********NEWS***********NEWS********NEWS********</marquee>
 </div>
 
-<div id="SeitenfensterLinks">
-  <div id="menu">
-
-    <ul>
-      <li id="menuLink" ><a href="">Accountinfo</a> </li>
-      <li id="menuLink"><a href="http://localhost:3000/main">Home</a></li>
-      <li id="menuLink"><a href="http://localhost:3000/impfpass">Impfpass</a></li>
-      <li id="menuLink"><a href="#">Notizen</a></li>
-      <li id="menuLink"><a href="#">soziale Projekte</a></li>
-      <li id="menuLink"><a href=" ">Kompedium</a></li>
-    </ul>
-  </div>
-
-</div>
+<%= render partial: 'pages/leftsidepart'%>
 <!-- div mit combobox für die Auswahl -->
 <div id="tabellenPlatz">
 
