--- a/app/views/projects/sozialeProjekte_page.html.erb
+++ b/app/views/projects/sozialeProjekte_page.html.erb
@@ -136,6 +136,19 @@
 
     <h2>aktuelle Projekte</h2>
 
+    <table>
+      <thead></thead>
+      <tbody>
+        <% @projects.each do |project| %>
+        <tr>
+          <td><%= project.project_name %><td>
+          <td><%= project.s_description %><td>
+          <td>Link<td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+
   </div>
 </div>
 
