added link to projects to acces extern pages

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -51,6 +51,11 @@
     <%= f.number_field :financial_support_needed %>
   </div>
 
+  <div class="field">
+    <%= f.label :link %>
+    <%= f.text_area :link %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
