--- a/app/views/projects/sozialeProjekte_page.html.erb
+++ b/app/views/projects/sozialeProjekte_page.html.erb
@@ -143,7 +143,7 @@
         <tr>
           <td><%= project.project_name %><td>
           <td><%= project.s_description %><td>
-          <td>Link<td>
+          <td><% if project.link_is_accessable?  %><%= link_to "goto official page", project.link, target: "_blank" %><% else %> no active link <% end %><td>
         </tr>
         <% end %>
       </tbody>
