--- a/app/views/pages/test_page.html.erb
+++ b/app/views/pages/test_page.html.erb
@@ -125,33 +125,163 @@
 
      /*unerlässlich*/
     #map {
-      height: 100vh;
-      width: 100vw;
-      z-index: -1;
+      height: 100%;
     }
 
-  </style>
 
+    #description {
+      font-family: Roboto;
+      font-size: 15px;
+      font-weight: 300;
+    }
+
+    #infowindow-content .title {
+      font-weight: bold;
+    }
+
+    #infowindow-content {
+      display: none;
+    }
+
+    #map #infowindow-content {
+      display: inline;
+    }
+
+    .pac-card {
+      margin: 10px 10px 0 0;
+      border-radius: 2px 0 0 2px;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      outline: none;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+      background-color: #fff;
+      font-family: Roboto;
+    }
+
+    #pac-container {
+      padding-bottom: 12px;
+      margin-right: 12px;
+    }
+
+    .pac-controls {
+      display: inline-block;
+      padding: 5px 11px;
+    }
+
+    .pac-controls label {
+      font-family: Roboto;
+      font-size: 13px;
+      font-weight: 300;
+    }
+
+    #pac-input {
+      background-color: #fff;
+      font-family: Roboto;
+      font-size: 15px;
+      font-weight: 300;
+      margin-left: 12px;
+      padding: 0 11px 0 13px;
+      text-overflow: ellipsis;
+      width: 400px;
+    }
+
+    #pac-input:focus {
+      border-color: #4d90fe;
+    }
+
+    
+
+
+  </style>
 
 </head>
 
 <div id="gesamtesFenster">
 
-  <div id="map"></div>
-  <script>
-      var map;
-      function initMap() {
-          map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: 52.138751, lng: 11.645790},
-              zoom: 9
 
+  <input id="pac-input" class="controls" type="text"
+         placeholder="Enter a location">
+  <div id="map"></div>
+  <div id="infowindow-content">
+    <span id="place-name"  class="title"></span><br>
+    Place ID <span id="place-id"></span><br>
+    <span id="place-address"></span>
+  </div>
+
+  <script>
+      // This sample uses the Place Autocomplete widget requesting only a place
+      // ID to allow the user to search for and locate a place. The sample
+      // then reverse geocodes the place ID and displays an info window
+      // containing the place ID and other information about the place that the
+      // user has selected.
+
+      // This example requires the Places library. Include the libraries=places
+      // parameter when you first load the API. For example:
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZLMhUcGgyrPcMynUS21Tq4IdYXTRJXeY&libraries=geometry,places";
+
+      function initMap() {
+          var map = new google.maps.Map(document.getElementById('map'), {
+              center: {lat: 52.138949, lng: 11.645445},
+              zoom: 9
+          });
+
+          var input = document.getElementById('pac-input');
+
+          var autocomplete = new google.maps.places.Autocomplete(
+              input, {placeIdOnly: true});
+          autocomplete.bindTo('bounds', map);
+
+          map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+          var infowindow = new google.maps.InfoWindow();
+          var infowindowContent = document.getElementById('infowindow-content');
+          infowindow.setContent(infowindowContent);
+          var geocoder = new google.maps.Geocoder;
+          var marker = new google.maps.Marker({
+              map: map
+          });
+          marker.addListener('click', function() {
+              infowindow.open(map, marker);
+          });
+
+          autocomplete.addListener('place_changed', function() {
+              infowindow.close();
+              var place = autocomplete.getPlace();
+
+              if (!place.place_id) {
+                  return;
+              }
+              geocoder.geocode({'placeId': place.place_id}, function(results, status) {
+
+                  if (status !== 'OK') {
+                      window.alert('Geocoder failed due to: ' + status);
+                      return;
+                  }
+                  map.setZoom(11);
+                  map.setCenter(results[0].geometry.location);
+                  // Set the position of the marker using the place ID and location.
+                  marker.setPlace({
+                      placeId: place.place_id,
+                      location: results[0].geometry.location
+                  });
+                  marker.setVisible(true);
+                  infowindowContent.children['place-name'].textContent = place.name;
+                  infowindowContent.children['place-id'].textContent = place.place_id;
+                  infowindowContent.children['place-address'].textContent =
+                      results[0].formatted_address;
+                  infowindow.open(map, marker);
+              });
           });
       }
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZLMhUcGgyrPcMynUS21Tq4IdYXTRJXeY&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZLMhUcGgyrPcMynUS21Tq4IdYXTRJXeY&libraries=places&callback=initMap"
           async defer></script>
 
+
+
+
 </div>
+
 <div id="laufsch">
   <marquee position="bottom" direction="left" bgcolor="transparent" scrollamount="10" scrolldelay="100">*****NEWS********NEWS************NEWS********NEWS***********NEWS********NEWS********</marquee>
 </div>
