--- a/app/views/pages/test_page.html.erb
+++ b/app/views/pages/test_page.html.erb
@@ -189,7 +189,7 @@
       border-color: #4d90fe;
     }
 
-    
+
 
 
   </style>
@@ -200,7 +200,7 @@
 
 
   <input id="pac-input" class="controls" type="text"
-         placeholder="Enter a location">
+         placeholder="Zieleingabe">
   <div id="map"></div>
   <div id="infowindow-content">
     <span id="place-name"  class="title"></span><br>
