--- a/app/views/pages/impfpass_page.html.erb
+++ b/app/views/pages/impfpass_page.html.erb
@@ -120,9 +120,7 @@
   <%= image_tag "impfpassBackground.jpg", class: "testIcon" %>
 </div>
 
-<div id="laufsch">
-  <marquee position="bottom" direction="left" bgcolor="transparent" scrollamount="10" scrolldelay="100">*****NEWS********NEWS************NEWS********NEWS***********NEWS********NEWS********</marquee>
-</div>
+<%= render partial: 'pages/newsline'%>
 
 <%= render partial: 'pages/leftsidepart'%>
 <!-- div mit combobox für die Auswahl -->
@@ -138,6 +136,8 @@
         <option value="Schutzimpfungen">Schutzimpfungen</option>
       </select>
     </div>
+
+    <div id="link_to_vacc_information"><%= link_to "Weitere Informationen", '/vaccination_information'%></div>
 
     <!-- Tabelle erstellen-->
     <div id="tabellenContainer">
