--- a/app/views/pages/test_page.html.erb
+++ b/app/views/pages/test_page.html.erb
@@ -282,9 +282,7 @@
 
 </div>
 
-<div id="laufsch">
-  <marquee position="bottom" direction="left" bgcolor="transparent" scrollamount="10" scrolldelay="100">*****NEWS********NEWS************NEWS********NEWS***********NEWS********NEWS********</marquee>
-</div>
+<%= render partial: 'pages/newsline'%>
 
 
 
