--- a/app/views/pages/vaccination_information.html.erb
+++ b/app/views/pages/vaccination_information.html.erb
@@ -6,6 +6,7 @@
 
 <%= render partial: 'pages/leftsidepart'%>
 
-<div id="inhalt">
-
+<div id="tabellenPlatz">
+  <div id="wikiTitle"> Impfkalender des RKI Stand 2017</div>
+  <%= image_tag "vaccination_calender_2017.png", id: "vaccination_calender"%>
 </div>
