--- a/app/assets/stylesheets/impfpass.css
+++ b/app/assets/stylesheets/impfpass.css
@@ -29,3 +29,17 @@
     border: white solid 1px;
     padding: 5px;
 }
+
+#vaccination_calender{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2.5%;
+}
+
+#link_to_vacc_information{
+    font-family: "Segoe UI Light";
+    font-size: 1.5em;
+    color: white;
+    margin-left: 1%;
+}
