commit new forms

--- a/app/views/pages/welcome_page.html.erb
+++ b/app/views/pages/welcome_page.html.erb
@@ -31,7 +31,7 @@
 
   <div id="register">
     <div id="link">
-      <%= link_to 'Registrierung' , '/test'%>
+      <%= link_to 'Registrierung' , '/regist'%>
   </div>
   </div>
 </div>
