--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -201,3 +201,109 @@ body {
 
 }
 
+#registerContainer{
+    position: absolute;
+    text-align: center;
+
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-40%);
+
+    box-shadow: inset 0 0 0 500px rgba(255,255,255,0.32);
+    border-radius : 25px;
+    height: 50%;
+    z-index: 2;
+}
+
+#regLegend{
+    margin-left: 8.5vw;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: "Segoe UI";
+    font-size: 2.8em;
+
+}
+
+#regField{
+    padding: 20px 20px 50px 20px;
+    border: none;
+
+}
+
+#reg{
+    text-align: center;
+    color: white;
+
+}
+
+#regAttribut{
+    font-family: "Segoe UI Light";
+    font-size: 2.0em;
+    text-align: left;
+    padding: 20px 20px 20px 20px;
+
+}
+
+#regLogin{
+    width: 8vw;
+    padding: 5px 40px 5px 40px;
+    font-family: "Segoe UI Light";
+    font-size: 2.0em;
+
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    margin-left: 13vw;
+    border-color: white;
+    border-width: 1.5px;
+    border-style: solid;
+
+
+}
+
+#regInput {
+    color: white;
+    font-family: "Segoe UI Light";
+    font-size: 1.8em;
+    outline: none;
+    background-color: transparent;
+    width: 90%;
+    border-color: white;
+    border-radius: 10px;
+    border-width: 2px;
+
+}
+
+.radiobutton {
+    width: 20px;
+    height: 20px;
+}
+
+.notiz1{
+
+    position: fixed;left: 30em;
+}
+
+.notiz2{
+    position: fixed; left: 30em;top: 9em;
+
+}
+
+.Seitenfenster3{
+
+    background: grey;
+    width: 180px;
+    height: 20px;
+    float:right;
+
+    position: fixed; margin-top: 16em;
+
+}
+
+#noteAttribut{
+    font-family: "Segoe UI Light";
+    font-size: 2.0em;
+    text-align: left;
+    padding: 10px 10px 10px 10px;
+
+}
