--- a/app/views/diseases/wikiMain_page.html.erb
+++ b/app/views/diseases/wikiMain_page.html.erb
@@ -8,7 +8,7 @@
 <!-- div mit combobox für die Auswahl -->
 <div id="tabellenPlatz">
 
-  <div id="wikiTitle">Kompedium</div>
+  <div id="wikiTitle">Kompendium</div>
   <div id="inhalt">
     <ul>
       <% @diseases.each do |disease| %>
