--- a/app/views/pages/_leftsidepart.html.erb
+++ b/app/views/pages/_leftsidepart.html.erb
@@ -7,7 +7,7 @@
       <li id="menuLink"><%= link_to "Impfpass", "/impfpass"%></li>
       <li id="menuLink"><%= link_to "Notizen", "/note"%></li>
       <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
-      <li id="menuLink"><%= link_to "Kompedium", "/wikiMain" %></li>
+      <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
     </ul>
   </div>
 
