--- a/app/views/pages/_newsline.erb
+++ b/app/views/pages/_newsline.erb
@@ -1,3 +1,3 @@
 <div id="laufsch">
-  <marquee position="bottom" direction="left" bgcolor="transparent" scrollamount="10" scrolldelay="100">*****NEWS********NEWS************NEWS********NEWS***********NEWS********NEWS********</marquee>
+  <marquee position="bottom" direction="left" bgcolor="transparent" scrollamount="10" scrolldelay="100">Achtung: Grippewelle in Deutschland</marquee>
 </div>
