--- a/app/views/pages/notiz.html.erb
+++ b/app/views/pages/notiz.html.erb
@@ -16,13 +16,13 @@
   <div class="notiz2">
 
     <textarea id="noteAttribut" style="resize:none" name="text" cols="75" rows="13" placeholder="Notiz"></textarea>
-    <input type="submit" value="Speichern" />
+    <input type="submit" value="Speichern" style="font-size: 16pt" />
 
   </div>
 
   <div class="Seitenfenster3">
-    <button type="button" >Hinzufügen</button>
-    &emsp;&nbsp; <button type="button">Löschen</button>
+    <button type="button" style="font-size: 16pt">Hinzufügen</button>
+    &emsp;&nbsp; <button type="button" style="font-size: 16pt">Löschen</button>
   </div>
 
 
