--- a/app/assets/stylesheets/newsline.css
+++ b/app/assets/stylesheets/newsline.css
@@ -14,5 +14,6 @@
     height: 1em;
     color: #ffffff;
     text-align: center; font-style: normal; font-size: 20px;
+    background: rgba(0,0,0, .35);
     z-index: 3;
 }
