--- a/app/views/pages/_leftsidepart.html.erb
+++ b/app/views/pages/_leftsidepart.html.erb
@@ -6,8 +6,8 @@
       <li id="menuLink"><%= link_to "Home", "/main"%></li>
       <li id="menuLink"><%= link_to "Impfpass", "/impfpass"%></li>
       <li id="menuLink"><%= link_to "Notizen", "/"%></li>
-      <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
-      <li id="menuLink"><%= link_to "Kompedium", "/wikiMain" %></li>
+      <li id="menuLink"><%= link_to "Soziale Projekte", "/socialProjects" %></li>
+      <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
     </ul>
   </div>
 
