linked registartion page to welcome page

--- a/app/views/pages/welcome_page.html.erb
+++ b/app/views/pages/welcome_page.html.erb
@@ -31,7 +31,7 @@
 
   <div id="register">
     <div id="link">
-      <%= link_to 'Registrierung' , '/regist'%>
+      <%= link_to 'Registrierung' , new_user_registration_path%>
   </div>
   </div>
 </div>
