--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,66 @@
-<h2>Sign up</h2>
+<div class="video-container" xmlns="http://www.w3.org/1999/html">
+  <%= video_tag "rotation.mp4", id:"bgvid", autoplay:"", loop:"", muted:"" %>
+</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div id="registerContainer">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <!-- erstelle Login -->
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+
+    <div id="reg">
+      <fieldset id="regField">
+        <legend id="regLegend">Registrieren</legend>
+          <%= devise_error_messages! %>
+          <table>
+            <tr>
+              <td class="regAttribut"><%= f.label :user_name, style:"display: inline" %><span class="mandatory_field">*</span></td>
+              <td class="regAttribut"><%= f.email_field :user_name, autofocus: true, autocomplete: "off", class: "regInput" %></td>
+            </tr>
+
+            <tr>
+              <td class="regAttribut"><%#= f.label :first_name %>Vorname</td>
+              <td class="regAttribut"><%= f.email_field :first_name, autocomplete: "off", class: "regInput" %></td>
+            </tr>
+
+            <tr>
+              <td class="regAttribut"><%#= f.label :last_name %>Nachname</td>
+              <td class="regAttribut"><%= f.text_field :last_name, autocomplete: "off", class: "regInput" %></td>
+            </tr>
+
+            <tr>
+              <td class="regAttribut">Telefonnummer</td>
+              <td class="regAttribut"><%= f.email_field :phone, autocomplete: "off", class: "regInput" %></td>
+            </tr>
+
+            <tr>
+              <td class="regAttribut"><%= f.label :email, style:"display: inline"  %><span class="mandatory_field">*</span></td>
+              <td class="regAttribut"><%= f.email_field :email, autocomplete: "email", class: "regInput" %></td>
+            </tr>
+
+            <tr>
+              <td class="regAttribut"><%= f.label :password, style:"display: inline"  %><span class="mandatory_field">*</span>
+                <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br/>
+              </td>
+              <td class="regAttribut"><%= f.password_field :password, autocomplete: "off", class: "regInput"%></td>
+            </tr>
+
+            <tr>
+              <td class="regAttribut"><%= f.label :password_confirmation, style:"display: inline"  %><span class="mandatory_field">*</span></td>
+              <td class="regAttribut"><%= f.password_field :password_confirmation, autocomplete: "off", class: "regInput"%></td>
+            </tr>
+        </table>
+
+        <%= f.submit "Sign up",id: "regLogin" %>
+
+        <div id="mandatory_fields">
+          <span>Felder mit einem <span class="mandatory_field">*</span> sind auszuf&uuml;llen um sich zu registrieren</span>
+        </div>
+      </fieldset>
+    </div>
+ <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field"> some randome text </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
 <%= render "devise/shared/links" %>
+
