--- a/app/views/pages/_leftsidepart.html.erb
+++ b/app/views/pages/_leftsidepart.html.erb
@@ -2,7 +2,7 @@
   <div id="menu">
 
     <ul>
-      <li id="menuLink"><%= link_to "Accountinfo", edit_user_registration_path(current_user) %></li>
+      <li id="menuLink"><%= link_to "Accountinfo", "/accinfo" %></li>
       <li id="menuLink"><%= link_to "Home", "/main"%></li>
       <li id="menuLink"><%= link_to "Impfpass", "/impfpass"%></li>
       <li id="menuLink"><%= link_to "Notizen", "/note"%></li>
