user authentication is now needed to access functions

--- a/app/views/pages/welcome_page.html.erb
+++ b/app/views/pages/welcome_page.html.erb
@@ -25,7 +25,7 @@
   <div id="logReg">
   <div id="login">
     <div id="link">
-    <%= link_to 'Login' , '/login'%>
+    <%= link_to 'Login' , new_user_session_path%>
   </div>
   </div>
 
