admins and docs now ot theire priviliges

--- a/app/views/pages/_leftsidepart.html.erb
+++ b/app/views/pages/_leftsidepart.html.erb
@@ -2,13 +2,33 @@
   <div id="menu">
 
     <ul>
-      <li id="menuLink"><%= link_to "Accountinfo", "/accinfo" %></li>
-      <li id="menuLink"><%= link_to "Home", "/main"%></li>
-      <li id="menuLink"><%= link_to "Impfpass", "/impfpass"%></li>
-      <li id="menuLink"><%= link_to "Notizen", "/note"%></li>
-      <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
-      <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
       <% if user_signed_in? %>
+        <% if current_user.admin? %>
+          <li id="menuLink"><%= link_to "Users", admin_users_path %></li>
+          <li id="menuLink"><%= link_to "Home", "/main" %></li>
+          <li id="menuLink"><%= link_to "Impfungen", vaccinations_path %></li>
+          <li id="menuLink"><%= link_to "Patienten Impfungen", vaccination_cards_path %></li>
+          <li id="menuLink"><%= link_to "Notizen", "/note" %></li>
+          <li id="menuLink"><%= link_to "soziale Projekte", projects_path %></li>
+          <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
+          <li id="menuLink"><%= link_to "Krankheiten", diseases_path %></li>
+        <% else if current_user.doc?%>
+          <li id="menuLink"><%= link_to "Accountinfo", "/accinfo" %></li>
+          <li id="menuLink"><%= link_to "Home", "/main" %></li>
+          <li id="menuLink"><%= link_to "Impfungen", vaccinations_path %></li>
+          <li id="menuLink"><%= link_to "Patienten Impfungen", vaccination_cards_path %></li>
+          <li id="menuLink"><%= link_to "Notizen", "/note" %></li>
+          <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
+          <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
+          <li id="menuLink"><%= link_to "Krankheiten", diseases_path %></li>
+        <% else %>
+          <li id="menuLink"><%= link_to "Accountinfo", "/accinfo" %></li>
+          <li id="menuLink"><%= link_to "Home", "/main" %></li>
+          <li id="menuLink"><%= link_to "Impfungen", "/impfpass" %></li>
+          <li id="menuLink"><%= link_to "Notizen", "/note" %></li>
+          <li id="menuLink"><%= link_to "soziale Projekte", "/socialProjects" %></li>
+          <li id="menuLink"><%= link_to "Kompendium", "/wikiMain" %></li>
+        <% end %><% end %>
         <li id="menuLink"><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
       <% end %>
     </ul>
