--- a/app/views/pages/impfpass_page.html.erb
+++ b/app/views/pages/impfpass_page.html.erb
@@ -22,7 +22,7 @@
         <option value="Schutzimpfungen">Schutzimpfungen</option>
       </select>
       <%= link_to "Impfkalender", '/vaccination_information', id: "link_to_vacc_information"%>
-      <%= link_to 'Impfung hinzufügen',  new_vaccination_card_path%>
+      <%= link_to "Impfung hinzufügen",  new_vaccination_card_path, id: "link_to_vacc_information"%>
     </div>
 
     <div id="link_to_vacc_information"></div>
