--- a/app/views/projects/sozialeProjekte_page.html.erb
+++ b/app/views/projects/sozialeProjekte_page.html.erb
@@ -11,6 +11,7 @@
   <div id="wikiTitle">Soziale Projekte</div>
   <div id="inhalt">
 
+    <div id="allgInformationen">
     <br>
     <h2>Allgemeine Informationen</h2>
     Schreiben Sie uns eine E-Mail an WwHaTsocialProjects@gmx.de um einen Antrag auf Veröffentlichung
@@ -19,10 +20,10 @@
     Im Folgenden finden Sie das Formular für die Beantragung der Veröffentlichung.
     <br><br>
 
-    <%= link_to "Antrag auf Veröffentlichung", {controller: "pages" , action: "pdf"}, target: "_blank"%>
+    <%= link_to "Antrag auf Veröffentlichung", {controller: "pages" , action: "pdf"}, target: "_blank", id: "link_to_Antrag"%>
+    </div>
 
-
-    <h2>aktuelle Projekte</h2>
+    <h2>Aktuelle Projekte</h2>
 
     <table>
       <thead></thead>
